MDL-78479 theme: display footer at the bottom on small devices

--- a/theme/boost/scss/moodle/layout.scss
+++ b/theme/boost/scss/moodle/layout.scss
@@ -35,6 +35,7 @@
 
 #page.drawers {
     margin-top: $navbar-height;
+    min-height: calc(100vh - #{$navbar-height});
     @include thin-scrolls($gray-100);
     .main-inner {
         max-width: 100%;
